# screenguard

./: Cargo.toml  README.md  install.sh  parental-controller-spec.md
.github/workflows/: release-mobile.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  db.rs  dbus.rs  discovery.rs  enforcement.rs  heartbeat.rs  i18n.rs  main.rs  pairing.rs  status_dbus.rs  users.rs  ws_client.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  messages.rs  models.rs  protocol.rs
crates/dummy-server/: Cargo.toml
crates/dummy-server/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  main.rs  remaining.rs  state.rs  ws.rs
crates/server/src/api/: agents.rs  auth.rs  mod.rs  profiles.rs  usage.rs
crates/tray/: Cargo.toml  build.rs
crates/tray/src/: i18n.rs  main.rs
deploy/: parental-controller-agent.service  parental-controller-server.service  screenguard-agent.service  screenguard-dbus.conf  screenguard-server.service  screenguard-tray.desktop  screenguard-webui.service
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/parentalcontrol/mobile/: MainActivity.kt
mobile/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: api_client.dart  auth_provider.dart  data_providers.dart  l10n.dart  main.dart  models.dart  settings_provider.dart  utils.dart
mobile/lib/screens/: about_screen.dart  agent_detail_screen.dart  agents_screen.dart  dashboard_screen.dart  login_screen.dart  main_shell.dart  profile_detail_screen.dart  server_setup_screen.dart  settings_screen.dart
mobile/lib/widgets/: daily_limits_editor.dart  schedule_editor.dart  screen_guard_logo.dart  usage_chart.dart
mobile/linux/: CMakeLists.txt
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/windows/runner/: Runner.rc
webui/: app.py
webui/static/: manifest.json  sw.js
webui/templates/: agent.html  agents.html  base.html  dashboard.html  login.html  profile.html  profiles.html  settings.html
webui/translations/: de.json  en.json  es.json  fr.json  pl.json  pt.json
