[package]
name = "server"
version = "0.7.9"
edition = "2024"
[[bin]]
name = "parental-controller-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# mDNS
mdns-sd = "0.11"

# Config
toml = "0.8"

# Systemd
libsystemd = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
