[package]
name = "tray"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screenguard-tray"
path = "src/main.rs"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
